--- a/gogo.css
+++ b/gogo.css
@@ -185,7 +185,7 @@ nav {
   padding: 2px 3px;
   border-radius: 3px;
 }
-.story-top {
+.story-top-header {
   flex-direction: row;
   align-items: center;
   font-size: 26px;
@@ -195,8 +195,9 @@ nav {
 .story-img {
   width: 188px;
   height: 287px;
+  border-radius: 10px;
 }
-.story1 {
+.story-in {
   position: relative;
   width: 188px;
   height: 287px;
@@ -205,6 +206,7 @@ nav {
 .story-logo,
 .story-title {
   position: absolute;
+  border-radius: 10px;
 }
 
 .story-logo {
@@ -222,4 +224,9 @@ nav {
 }
 .story-icon{
     color: white;
+}
+.story{
+    flex-direction: row;
+    gap: 0px 20px;
+    margin-left: 10px;
 }
