--- a/gogo.css
+++ b/gogo.css
@@ -297,17 +297,17 @@ nav {
   width: 290px;
   height: 20px;
 }
-.hevmayg-cards{
+.hevmayg-cards {
   flex-direction: row;
-  gap: 0px 16px;
+  gap: 0px 25px;
 }
-.hevmayg{
+.hevmayg {
   flex-direction: column;
   gap: 10px 0px;
 }
-.hevmayg-card-under{
+.hevmayg-card-under {
   flex-direction: row;
-  height: 20px ;
+  height: 20px;
   width: 200px;
 }
 .medee-img {
@@ -344,7 +344,7 @@ nav {
   width: 1200px;
   grid-template-areas:
     " big big top-left top-right"
-    "big big bottom-left bottom-right";
+    " big big bottom-left bottom-right";
 }
 .yariltslaga1 {
   grid-area: big;
@@ -392,10 +392,10 @@ nav {
   width: 80px;
   text-align: center;
 }
-.border-radius5px{
+.border-radius5px {
   border-radius: 5px;
 }
-.grid-text{
+.grid-text {
   flex-direction: row;
   margin-top: 100px;
 }
@@ -434,44 +434,113 @@ nav {
   border-top: 1px solid hsla(0, 0%, 100%, 0.15);
   font-size: 16px;
 }
-.hevmyg-text{
+.hevmyg-text {
   flex-direction: row;
   align-items: center;
   font-size: 40px;
- gap: 0px 20px;
+  gap: 0px 20px;
 }
-.hevmayg-card-img{
+.hevmayg-card-img {
   width: 264px;
   height: 230px;
-  
 }
-.hevmayg-card{
+.comic-card-img {
+  width: 542px;
+  height: 330px;
+}
+.hevmayg-card {
   width: 264px;
   height: 360px;
-  border: 1px solid gray;
+  border: 1px dotted gray;
 }
-.hevmayg-card-text{
+.hevmayg-card-text {
   margin-left: 16px;
   gap: 40px 0px;
   flex-direction: column;
-
 }
-.hevmayg-card-text h4{
-  font-size: 24px;
-  margin:0;
-  
-
-  
+.hevmayg-card-text h4 {
+  font-size: 20px;
+  margin: 0;
 }
-.hevmyg{
+.hevmyg {
   flex-direction: row;
   align-items: center;
 }
-.hevmyg-text div{
-  background-color:#00b0f4;
+.hevmyg-text div {
+  background-color: #00b0f4;
   font-size: 18px;
   color: white;
-  padding:2px 3px ;
+  padding: 2px 3px;
   border-radius: 3px;
+}
+.tec-card{
+  width: 263px;
+  height: 300px;
+  border: 1px dotted gray;
+}
+.comic-card{
+  width: 542px;
+  height: 330px;
+  flex-direction: row;
+  gap: 0px 40px ;
+}
+button{
+  width: 759px;
+  font-size: 18px;
+  align-items: center;
+  justify-content: center;
+  gap: 0px 10px;
+}
+button img{
+  width: 40px;
+  height: 40px;
+}
+.tec-text {
+  font-size: 26px;
+  align-items: center;
+}
+.comic-text {
+  font-size: 26px;
+  align-items: center;
+}
+.tec-card-under{
+  flex-direction: row;
+  height: 20px;
+  width: 200px;
+  gap: 5px 5px;
 
 }
+.comic-card-under{
+  flex-direction: row;
+  height: 20px;
+  width: 200px;
+  gap: 5px 5px;}
+.tec-card-top{
+  width: 263px;
+  height: 150px;
+  border-radius: 10px;
+}
+.comic-card-top{
+  width: 263px;
+  height: 150px;
+  border-radius: 10px;
+}
+.comic-card{
+  border: 1px solid gray;
+}
+.tec{
+  margin-top: 50px;
+}
+.comic{
+  margin-top: 50px;
+}
+.tec-cards{
+  flex-direction: row;
+  gap: 0px 30px;
+}
+.comic-cards{
+  flex-direction: row;
+  gap: 0px 30px;
+}
+.
+
