--- a/gogo.css
+++ b/gogo.css
@@ -1,9 +1,10 @@
 body {
   margin: 0px;
-  justify-content: center;
 }
+
 .body-a {
   background-color: #f0efef;
+
 }
 .flex {
   display: flex;
@@ -12,10 +13,12 @@ body {
   width: 1200px;
   flex-direction: column;
   background: linear-gradient(180deg, #fff, #f7f7f7);
+  margin: auto;
 }
 .page2 {
   width: 1200px;
   flex-direction: column;
+  margin: auto;
 }
 .border-radius10px {
   border-radius: 10px;
@@ -542,5 +545,68 @@ button img{
   flex-direction: row;
   gap: 0px 30px;
 }
-.
+.page3{
+  margin-top: 150px;
+  background-color: #1a1a1a;
+  display: block;
+  width: 100vw;
+  justify-content: center;
+}
+  .page3-in{
+    justify-content: center;
+  }
+.video{
+  gap: 40px 0px;
+  flex-direction: column;
+  justify-content: center;
+}
+.video-bottom{
+   flex-direction: row;
+   gap: 0px 40px;
+}
+.video-midle{
+  flex-direction: row;
+  gap: 0px 40px;
+}
+.video-card h3{
+  color: white;
+}
+.video-top{
+  align-items: center;
+  font-size: 20px;
+}
+.video-card{
+  width: 263px;
 
+}
+.video-card img{
+  width: 263px;
+}
+.video-card-under{
+  width: 200px;
+  height: 20px;
+
+}
+.video-card-under img{
+  width: 30px;
+}
+footer{
+  width: 100vw;
+  justify-content: center;
+  align-items: center;
+}
+.footer-in{
+  max-width: 1100px;
+  justify-content: space-between;
+}
+.footer-text{
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+.footer-texts{
+ font-size: 16px;
+}
+.footer-icon{
+  width: 40px;
+  height: 40px  ;
+}
