--- a/gogo.css
+++ b/gogo.css
@@ -90,9 +90,15 @@ nav {
   border-radius: 5px;
   position: relative;
 }
-.main-img:hover +.main-img-hover{
-  background-image:url(https://mgl.gogo.mn/newsn/thumbnail/1000/np/2023/09/29/5203274/16-105113-883522705.jpeg);
-}
+.main-img:hover .main-img-hover{
+   background-color: black;
+  }
+  .yariltslaga1:hover{
+    scale: 1.04;
+  }
+  .grid-img:hover{
+    scale: 1.1;
+  }
 .main-img-hover{
   position: absolute;
   top: 88px;
@@ -499,7 +505,7 @@ nav {
   width: 542px;
   height: 330px;
   flex-direction: row;
-  gap: 0px 40px;
+  gap: 0px 60px;
 }
 button {
   width: 759px;
@@ -551,6 +557,8 @@ button img {
 }
 .comic {
   margin-top: 50px;
+  margin-lef:20px;
+  
 }
 .tec-cards {
   flex-direction: row;
@@ -589,6 +597,7 @@ button img {
 .video-top {
   align-items: center;
   font-size: 20px;
+  color: white;
 }
 .video-card {
   width: 263px;
@@ -599,9 +608,11 @@ button img {
 .video-card-under {
   width: 200px;
   height: 20px;
+  color: white;
 }
 .video-card-under img {
   width: 30px;
+  color: white;
 }
 footer {
   width: 100vw;
@@ -609,12 +620,14 @@ footer {
   align-items: center;
 }
 .footer-in {
-  max-width: 1100px;
-  justify-content: space-between;
+width: 1200px;  
+justify-content: space-between;
+
 }
 .footer-text {
   flex-direction: row;
   flex-wrap: wrap;
+  width: 600px;
 }
 .footer-texts {
   font-size: 16px;
